if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    message(FATAL_ERROR "in-source build is not supported. Please build from another directory.")
endif ()

cmake_minimum_required(VERSION 2.8.7)
project(smpp_codec_c)
find_package(CUDA QUIET REQUIRED)

set(smpp_codec_c_VERSION_MAJOR 0)
set(smpp_codec_c_VERSION_MINOR 1)

set(CUDA_SEPARABLE_COMPILATION ON)
set(CUDA_COMPUTE_SEPARABLE_COMPILATION_OBJECT_FILE_NAME ON)
set(CUDA_LINK_SEPARABLE_COMPILATION_OBJECTS ON)
set(CUDA_PROPAGATE_HOST_FLAGS OFF)
#set(CUDA_HOST_COMPILER clang++)
#set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -L/home/prabath/installs/log4c-1.2.4/lib -llog4c")
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}")
#set(BUILD_SHARED_LIBS OFF)

set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /home/prabath/installs/log4c-1.2.4/lib)
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/local/lib)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lm -pthread -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lm -lrt /home/prabath/installs/log4c-1.2.4/lib/liblog4c.so -Wl,-rpath -Wl,/home/prabath/installs/log4c-1.2.4/lib -lconfig -pthread -fPIC")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lrt /usr/local/lib/libconfig.so -Wl,/usr/local/lib/libconfig.so")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lm -lrt -pthread -fPIC")
if (DEFINED ENV{LIBRARY_OUTPUT_PATH})
    message(STATUS "LIBRARY_OUTPUT_PATH DEFINED=$ENV{LIBRARY_OUTPUT_PATH}")
else ()
    set(ENV{LIBRARY_OUTPUT_PATH} ${CMAKE_SOURCE_DIR}/lib)
    message(STATUS "LIBRARY_OUTPUT_PATH=" $ENV{LIBRARY_OUTPUT_PATH})
endif ()

set(LIBRARAY_NAME "SMPPDecoder")
set(JAVA_INCLUDE_PATH $ENV{JAVA_HOME}/include)
set(JAVA_INCLUDE_PATH2 ${JAVA_INCLUDE_PATH}/linux)
set(LOG4C_PATH /home/prabath/installs/log4c-1.2.4/include)
set(LIB_CONFIG_PATH /usr/local/include)
message(STATUS "JAVA_INCLUDE_PATH=${JAVA_INCLUDE_PATH}")

include_directories(src/common)
include_directories(src/decoder)
include_directories(src/util)
include_directories(src/cuda-decoder)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
include_directories(${LOG4C_PATH})
include_directories(${LIB_CONFIG_PATH})

add_subdirectory(src/common)
add_subdirectory(src/decoder)
add_subdirectory(src/util)
add_subdirectory(src/cuda-decoder)

message(STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
message(STATUS "JAVA_HOME=$ENV{JAVA_HOME}")
message(STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
message(STATUS "JAVA_INCLUDE_PATH=${JAVA_INCLUDE_PATH}")
message(STATUS "LIBRARY_OUTPUT_PATH=" $ENV{LIBRARY_OUTPUT_PATH})

#link_directories("/home/prabath/installs/log4c-1.2.4/lib")
#link_libraries(${LIBRARAY_NAME} "/home/prabath/installs/log4c-1.2.4/lib/liblog4c.a")

cuda_add_library(${LIBRARAY_NAME} SHARED ${SOURCE_FILES})
target_link_libraries(${LIBRARAY_NAME} /home/prabath/installs/log4c-1.2.4/lib/liblog4c.so /usr/local/lib/libconfig.so)
set(LIBRARY_OUTPUT_PATH_REAL $ENV{LIBRARY_OUTPUT_PATH})
message(STATUS "LIBRARY_OUTPUT_PATH=" ${LIBRARY_OUTPUT_PATH_REAL})
install(TARGETS ${LIBRARAY_NAME} DESTINATION ${LIBRARY_OUTPUT_PATH_REAL})